envoy/envoy.yaml
static_resources:
  clusters:
    - name: grpc_cluster
      connect_timeout: 0.25s
      type: STATIC
      lb_policy: ROUND_ROBIN
      http2_protocol_options: {}  # Ensures HTTP/2 (gRPC) support
      hosts:
        - socket_address: { address: 172.17.0.2, port_value: 50051 }  # Address of the socat proxy
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 50051 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              config:
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: grpc
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: grpc_cluster
                http_filters:
                  - name: envoy.filters.http.router
